--- a/sentry/ansible/defaults/main.yml
+++ b/sentry/ansible/defaults/main.yml
@@ -1,8 +1,8 @@
 # Default Variables
-sentry_admin_email: "{{ ansible_env.SENTRY_ADMIN_EMAIL | default('admin@sentry.com') }}"
-sentry_admin_password: "{{ ansible_env.SENTRY_ADMIN_PASSWORD | default('admin') }}"
+sentry_admin_email: "{{ SENTRY_ADMIN_EMAIL | default('admin@sentry.com') }}"
+sentry_admin_password: "{{ SENTRY_ADMIN_PASSWORD | default('admin') }}"
 
-sentry_repo_path: "{{ ansible_env.SENTRY_REPO_PATH | default('/home/{{ ansible_user }}/self-hosted') }}"
+sentry_repo_path: "{{ SENTRY_REPO_PATH | default('/home/' + ansible_user + '/self-hosted') }}"
 sentry_repo_url: "https://github.com/getsentry/self-hosted.git"
 sentry_repo_branch: "master"
 
