--- a/sentry/ansible/inventory/hosts.ini
+++ b/sentry/ansible/inventory/hosts.ini
@@ -1,2 +1,2 @@
-[sentry-server]
-18.61.239.212
+[sentry_server]
+98.130.18.117 ansible_user=ubuntu ansible_private_key_file=/home/tecnotree/workspace/self-hosted-sentry/sentry/terraform/secrets/sentry-key.pem
