--- a/sentry/ansible/sentry.yml
+++ b/sentry/ansible/sentry.yml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy Sentry with Docker on AWS EC2
-  hosts: sentry-server
+  hosts: sentry_server
   become: yes
   vars_files:
     - defaults/main.yml
